--- a/new_test_scenarios/research_team/center.yml
+++ b/new_test_scenarios/research_team/center.yml
@@ -4,7 +4,7 @@ reserved_value: 0.0
 n_edges: 3
 outcome_spaces:
   - type: DiscreteCartesianOutcomeSpace
-    name: DataScientistNegotiation
+    name: DataScientist
     issues:
     - type: DiscreteCardinalIssue
       name: Salary
@@ -13,7 +13,7 @@ outcome_spaces:
       name: Role
       values: ['junior', 'senior', 'lead']
   - type: DiscreteCartesianOutcomeSpace
-    name: EngineerNegotiation
+    name: SoftwareEngineer
     issues:
     - type: DiscreteCardinalIssue
       name: Salary
@@ -22,7 +22,7 @@ outcome_spaces:
       name: Role
       values: ['junior', 'senior', 'lead']
   - type: DiscreteCartesianOutcomeSpace
-    name: StatisticianNegotiation
+    name: Statistician
     issues:
     - type: DiscreteCardinalIssue
       name: Salary
@@ -33,4 +33,3 @@ outcome_spaces:
 evaluator:
   type: research_team_center.ResearchTeamEvaluator
   reserved_value: 0.0
-  budget_limit: 250000
