--- a/new_test_scenarios/service_provider/edges/customer_service.yml
+++ b/new_test_scenarios/service_provider/edges/customer_service.yml
@@ -5,10 +5,8 @@ type: LinearAdditiveUtilityFunction
 values:
 - type: TableFun
   mapping:
-    5: 0.0   # Very fast response is costly
-    10: 0.2
+    5: 0.0   # Very fast response is costly/difficult
     15: 0.4
-    20: 0.6
     30: 0.8
     45: 0.9
     60: 1.0  # Slower response is easier/cheaper
@@ -18,9 +16,7 @@ values:
     3: 0.8
     5: 0.6
     7: 0.4
-    8: 0.2
-    9: 0.1
     10: 0.0  # High satisfaction is difficult/costly
 weights:
-- 0.6  # Response time importance
+- 0.6  # Response time impact on costs
 - 0.4  # Satisfaction difficulty importance
