--- a/new_test_scenarios/service_provider/center.yml
+++ b/new_test_scenarios/service_provider/center.yml
@@ -7,45 +7,67 @@ outcome_spaces:
   - type: DiscreteCartesianOutcomeSpace
     name: CustomerService
     issues:
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: response_time_minutes
       values:
       - 5
+      - 15
+      - 30
+      - 45
       - 60
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: satisfaction_score
       values:
       - 1
+      - 3
+      - 5
+      - 7
       - 10
   - type: DiscreteCartesianOutcomeSpace
     name: TechnicalSupport
     issues:
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: resolution_rate_percent
       values:
       - 50
+      - 70
+      - 80
+      - 90
       - 100
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: expertise_level
       values:
       - 1
+      - 2
+      - 3
+      - 4
       - 5
   - type: DiscreteCartesianOutcomeSpace
     name: MaintenanceService
     issues:
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: uptime_percentage
       values:
       - 85
+      - 90
+      - 95
+      - 99
       - 100
-    - type: ContiguousIssue
+    - type: CategoricalIssue
       name: cost_efficiency
       values:
       - 1
+      - 2
+      - 3
+      - 4
       - 5
 evaluator:
-  type: service_evaluator.global_service_evaluator
+  type: service_evaluator.GlobalServiceEvaluator
+  reserved_value: 0.0
 side_evaluators:
-  - type: service_evaluator.service_quality_evaluator
-  - type: service_evaluator.technical_support_evaluator
-  - type: service_evaluator.maintenance_evaluator
+  - type: service_evaluator.ServiceQualityEvaluator
+    reserved_value: 0.0
+  - type: service_evaluator.TechnicalSupportEvaluator
+    reserved_value: 0.0
+  - type: service_evaluator.MaintenanceEvaluator
+    reserved_value: 0.0
