--- a/new_test_scenarios/multi_project/center.yml
+++ b/new_test_scenarios/multi_project/center.yml
@@ -39,25 +39,25 @@ side_ufuns:
     values:
     - type: TableFun
       mapping:
-        3: 1.0   # 3 months - fast campaign
-        6: 0.9   # 6 months - standard
-        9: 0.7   # 9 months - extended campaign
-        12: 0.4  # 12 months - too long
-        18: 0.1  # 18 months - way too long
+        6: 1.0   # 6 months - fast campaign
+        9: 0.9   # 9 months - standard
+        12: 0.7  # 12 months - extended campaign
+        18: 0.4  # 18 months - too long
+        24: 0.1  # 24 months - way too long
     - type: TableFun
       mapping:
-        25000: 0.0   # Very limited budget
-        50000: 0.3
-        100000: 0.6
-        150000: 0.8
-        250000: 1.0  # Generous marketing budget
+        50000: 0.0   # Very limited budget
+        100000: 0.3
+        200000: 0.6
+        300000: 0.8
+        500000: 1.0  # Generous marketing budget
     - type: TableFun
       mapping:
-        3: 1.0   # Small focused team
-        5: 0.9   # Good team size
-        8: 0.7   # Larger team
-        10: 0.5  # Getting unwieldy
-        15: 0.2  # Too many people
+        5: 1.0   # Small focused team
+        8: 0.9   # Good team size
+        12: 0.7  # Larger team
+        15: 0.5  # Getting unwieldy
+        20: 0.2  # Too many people
     weights:
     - 0.3  # Timeline importance
     - 0.5  # Budget importance (critical for marketing)
@@ -68,25 +68,25 @@ side_ufuns:
     values:
     - type: TableFun
       mapping:
+        6: 0.1   # 6 months - too rushed for R&D
+        9: 0.3   # 9 months - still tight
         12: 1.0  # 12 months - good R&D timeline
         18: 0.9  # 18 months - acceptable
         24: 0.7  # 24 months - longer but OK for R&D
-        36: 0.4  # 36 months - getting very long
-        48: 0.1  # 48 months - too long
     - type: TableFun
       mapping:
-        75000: 0.0   # Insufficient R&D budget
-        150000: 0.3
-        300000: 0.6
-        500000: 0.8
-        750000: 1.0  # Substantial R&D investment
+        50000: 0.0   # Insufficient R&D budget
+        100000: 0.3
+        200000: 0.6
+        300000: 0.8
+        500000: 1.0  # Substantial R&D investment
     - type: TableFun
       mapping:
-        2: 1.0   # Small specialized R&D team
-        4: 0.9   # Good R&D team size
-        6: 0.7   # Larger team
-        8: 0.5   # Getting large for R&D
-        12: 0.2  # Too many researchers
+        5: 1.0   # Small specialized R&D team
+        8: 0.9   # Good R&D team size
+        12: 0.6  # Larger team
+        15: 0.3  # Too many researchers
+        20: 0.1  # Way too many people
     weights:
     - 0.2  # Timeline less critical for R&D
     - 0.5  # Budget very important for R&D
@@ -97,25 +97,25 @@ side_ufuns:
     values:
     - type: TableFun
       mapping:
-        3: 1.0   # 3 months - quick infrastructure update
-        6: 0.8   # 6 months - reasonable
+        6: 1.0   # 6 months - quick infrastructure update
+        9: 0.8   # 9 months - reasonable
         12: 0.6  # 12 months - longer project
         18: 0.3  # 18 months - quite long
         24: 0.1  # 24 months - too long for infrastructure
     - type: TableFun
       mapping:
-        100000: 0.0  # Insufficient for good infrastructure
-        200000: 0.3
-        400000: 0.6
-        600000: 0.8
-        1000000: 1.0 # Substantial infrastructure investment
+        50000: 0.0  # Insufficient for good infrastructure
+        100000: 0.3
+        200000: 0.6
+        300000: 0.8
+        500000: 1.0 # Substantial infrastructure investment
     - type: TableFun
       mapping:
-        4: 1.0   # Small efficient infrastructure team
-        6: 0.8   # Good team size
-        8: 0.6   # Adequate team
-        12: 0.4  # Getting large
-        16: 0.2  # Too many people
+        5: 1.0   # Small efficient infrastructure team
+        8: 0.8   # Good team size
+        12: 0.6  # Adequate team
+        15: 0.4  # Getting large
+        20: 0.2  # Too many people
     weights:
     - 0.4  # Timeline important for infrastructure
     - 0.4  # Budget important
